// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSExpandableSection Controlled 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-section slds-is-open"
  >
    <h3
      className="slds-section__title"
    >
      <button
        aria-controls="controlled-expandable-section-expanded-section-content"
        aria-expanded={true}
        className="slds-button slds-section__title-action"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-section__title-action-icon slds-button__icon_left"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Toggle visibility of section
        </span>
        <span
          className="slds-truncate"
          title="Section Title"
        >
          Section Title
        </span>
      </button>
    </h3>
    <div
      aria-hidden={false}
      className="slds-section__content"
      id="controlled-expandable-section-expanded-section-content"
    >
      <p>
        Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis risus eget urna mollis ornare vel eu leo.
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSExpandableSection Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-section slds-is-open"
  >
    <h3
      className="slds-section__title"
    >
      <button
        aria-controls="default-expandable-section-expanded-section-content"
        aria-expanded={true}
        className="slds-button slds-section__title-action"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="slds-button__icon slds-section__title-action-icon slds-button__icon_left"
        >
          <use
            href="/assets/icons/utility-sprite/svg/symbols.svg#switch"
          />
        </svg>
        <span
          className="slds-assistive-text"
        >
          Toggle visibility of section
        </span>
        <span
          className="slds-truncate"
          title="Section Title"
        >
          Section Title
        </span>
      </button>
    </h3>
    <div
      aria-hidden={false}
      className="slds-section__content"
      id="default-expandable-section-expanded-section-content"
    >
      <p>
        Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis risus eget urna mollis ornare vel eu leo.
      </p>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSExpandableSection Non-collapsible 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-section slds-is-open"
  >
    <h3
      className="slds-section__title slds-theme_shade"
    >
      <span
        className="slds-truncate slds-p-horizontal_small"
        title="Section Title"
      >
        Section Title
      </span>
    </h3>
    <div
      aria-hidden={false}
      className="slds-section__content"
      id="non-collapsible-expandable-section-expanded-section-content"
    >
      <p>
        Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam quis risus eget urna mollis ornare vel eu leo.
      </p>
    </div>
  </div>
</div>
`;
